...
                            start.linkTo(parent.start)
                        }
                )
                FloatingActionButton(
                    onClick = onEditClicked,
                    modifier = Modifier
                        .testTag("editProfile")
                        .padding(16.dp)
                        .constrainAs(editButton) {
                            bottom.linkTo(parent.bottom)
                            end.linkTo(parent.end)
                        },
                    containerColor = Color.Black,
...
                        )
                    }
                }
            }
        }

        else -> Text(text = "Loading...")
    }
}

@Composable
fun UserLayout(
    user: UserUiModel,
...
